--- a/BarChart/histogram.html
+++ b/BarChart/histogram.html
@@ -27,6 +27,16 @@
   shape-rendering: crispEdges;
 }
 
+.tooltip {
+    position: absolute;
+    text-align: center;
+    padding: 10px;
+    background: #f9f9f9;
+    border: 1px solid #333;
+    border-radius: 4px;
+    pointer-events: none; /* Don't interfere with mouse events on page */
+    opacity: 0;
+}
 
 </style>
 <svg class="chart"></svg>
