--- a/BarChart/histogram.html
+++ b/BarChart/histogram.html
@@ -16,8 +16,7 @@
 .xaxis path,
 .xaxis line {
   fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
+  stroke: black;
 }
 
 .yaxis path,
@@ -34,7 +33,7 @@
     background: #f9f9f9;
     border: 1px solid #333;
     border-radius: 4px;
-    pointer-events: none; /* Don't interfere with mouse events on page */
+    pointer-events: none;
     opacity: 0;
 }
 
