--- a/Tree Maps/dendrogram_index.html
+++ b/Tree Maps/dendrogram_index.html
@@ -26,7 +26,7 @@
 }
 
 </style>
-<svg width="960" height="2000"></svg>
+<svg width="500" height="750"></svg>
 <script src="//d3js.org/d3.v4.min.js"></script>
 <script>
 
@@ -41,7 +41,7 @@ var tree = d3.cluster()
 var stratify = d3.stratify()
     .parentId(function(d) { return d.id.substring(0, d.id.lastIndexOf(".")); });
 
-d3.csv("flare.csv", function(error, data) {
+d3.csv("tree.csv", function(error, data) {
   if (error) throw error;
 
   var root = stratify(data)
